# openapi/src/main/java/fr/bankwiz/openapi/model/CurrencyEnum.java
@@ -1,56 +1,0 @@
-package fr.bankwiz.openapi.model;
-
-import java.net.URI;
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonValue;
-import org.openapitools.jackson.nullable.JsonNullable;
-import java.time.OffsetDateTime;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.*;
-import io.swagger.v3.oas.annotations.media.Schema;
-
-
-import java.util.*;
-import jakarta.annotation.Generated;
-
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonValue;
-
-/**
- * Gets or Sets CurrencyEnum
- */
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
-public enum CurrencyEnum {
-  
-  EUR("EUR"),
-  
-  USD("USD");
-
-  private String value;
-
-  CurrencyEnum(String value) {
-    this.value = value;
-  }
-
-  @JsonValue
-  public String getValue() {
-    return value;
-  }
-
-  @Override
-  public String toString() {
-    return String.valueOf(value);
-  }
-
-  @JsonCreator
-  public static CurrencyEnum fromValue(String value) {
-    for (CurrencyEnum b : CurrencyEnum.values()) {
-      if (b.value.equals(value)) {
-        return b;
-      }
-    }
-    throw new IllegalArgumentException("Unexpected value '" + value + "'");
-  }
-}
-
