# openapi/src/main/java/fr/bankwiz/openapi/model/CurrencyIndexDTO.java
@@ -4,8 +4,6 @@ import java.net.URI;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonValue;
-import fr.bankwiz.openapi.model.CurrencyEnum;
 import org.openapitools.jackson.nullable.JsonNullable;
 import java.time.OffsetDateTime;
 import jakarta.validation.Valid;
@@ -23,7 +21,7 @@ import jakarta.annotation.Generated;
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
 public class CurrencyIndexDTO {
 
-  private CurrencyEnum currency;
+  private String currencyIsoCode3;
 
   private String displayName;
 
@@ -36,29 +34,29 @@ public class CurrencyIndexDTO {
   /**
    * Constructor with only required parameters
    */
-  public CurrencyIndexDTO(CurrencyEnum currency, String displayName) {
-    this.currency = currency;
+  public CurrencyIndexDTO(String currencyIsoCode3, String displayName) {
+    this.currencyIsoCode3 = currencyIsoCode3;
     this.displayName = displayName;
   }
 
-  public CurrencyIndexDTO currency(CurrencyEnum currency) {
-    this.currency = currency;
+  public CurrencyIndexDTO currencyIsoCode3(String currencyIsoCode3) {
+    this.currencyIsoCode3 = currencyIsoCode3;
     return this;
   }
 
   /**
-   * Get currency
-   * @return currency
+   * Get currencyIsoCode3
+   * @return currencyIsoCode3
   */
-  @NotNull @Valid 
-  @Schema(name = "currency", requiredMode = Schema.RequiredMode.REQUIRED)
-  @JsonProperty("currency")
-  public CurrencyEnum getCurrency() {
-    return currency;
+  @NotNull 
+  @Schema(name = "currencyIsoCode3", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("currencyIsoCode3")
+  public String getCurrencyIsoCode3() {
+    return currencyIsoCode3;
   }
 
-  public void setCurrency(CurrencyEnum currency) {
-    this.currency = currency;
+  public void setCurrencyIsoCode3(String currencyIsoCode3) {
+    this.currencyIsoCode3 = currencyIsoCode3;
   }
 
   public CurrencyIndexDTO displayName(String displayName) {
@@ -110,21 +108,21 @@ public class CurrencyIndexDTO {
       return false;
     }
     CurrencyIndexDTO currencyIndexDTO = (CurrencyIndexDTO) o;
-    return Objects.equals(this.currency, currencyIndexDTO.currency) &&
+    return Objects.equals(this.currencyIsoCode3, currencyIndexDTO.currencyIsoCode3) &&
         Objects.equals(this.displayName, currencyIndexDTO.displayName) &&
         Objects.equals(this.symbol, currencyIndexDTO.symbol);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(currency, displayName, symbol);
+    return Objects.hash(currencyIsoCode3, displayName, symbol);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class CurrencyIndexDTO {\n");
-    sb.append("    currency: ").append(toIndentedString(currency)).append("\n");
+    sb.append("    currencyIsoCode3: ").append(toIndentedString(currencyIsoCode3)).append("\n");
     sb.append("    displayName: ").append(toIndentedString(displayName)).append("\n");
     sb.append("    symbol: ").append(toIndentedString(symbol)).append("\n");
     sb.append("}");
